[tool.poetry]
name = "kotug-interview"
version = "0.1.0"
description = ""
authors = ["Bas Ekkelenkamp <basekkelenkamp1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
